--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-site under construction
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8"/>
+	<title>ngugiephy</title>	
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="icon" type="image/png" href="images/favicon.png">
+</head>
+<body>
+	<div>
+		<h2>SITE UNDER CONSTRUCTION</h2>
+	</div>
+	<script type="text/javascript" src="assets/script.js"></script>
+</body>
+</html>
