--- a/index.html
+++ b/index.html
@@ -8,11 +8,48 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
+
+	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
+	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	
 </head>
 <body>
 	<div>
 		<h2>SITE UNDER CONSTRUCTION</h2>
 	</div>
+
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		<header class="mld-layout__header">
+			<div class="mdl-layout__header-row">
+				<span class="mdl-layout-title">
+					logo
+				</span>
+				<div class="mdl-layout-spacer"> </div>
+				<nav class="mdl-navigation mdl-layout--large-screen-only">
+					<a class="mdl-navigation__link" href="#">link</a>
+					<a class="mdl-navigation__link" href="#">link</a>
+					<a class="mdl-navigation__link" href="#">link</a>
+					<a class="mdl-navigation__link" href="#">link</a>
+					<a class="mdl-navigation__link" href="#">link</a>
+				</nav>				
+			</div>		
+		</header>
+		<div class="mdl-layout__drawer">
+			<span class="mdl-layout-title">logo</span>
+			<nav class="mdl-navigation">
+				<a class="mdl-navigation__link" href="">link</a>
+				<a class="mdl-navigation__link" href="">link</a>
+				<a class="mdl-navigation__link" href="">link</a>
+				<a class="mdl-navigation__link" href="">link</a>
+			</nav>
+		</div>
+
+		<footer class="">
+			
+		</footer>
+	</div>
+
 	<script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
