--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<!--link rel="stylesheet" type="text/css" href="assets/style.css"-->
 	<link rel="icon" type="image/png" href="images/favicon.png">
 
 	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
@@ -15,9 +15,9 @@
 	
 </head>
 <body>
-	<div>
+	<!--div>
 		<h2>SITE UNDER CONSTRUCTION</h2>
-	</div>
+	</div-->
 
 	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 		<header class="mld-layout__header">
