--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
+	<!--meta charset="utf-8"/>
 	<title>ngugiephy</title>	
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--link rel="stylesheet" type="text/css" href="assets/style.css"-->
-	<link rel="icon" type="image/png" href="images/favicon.png">
+	<!--link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="icon" type="image/png" href="images/favicon.png"-->
 
 	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
 	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
@@ -23,7 +23,7 @@
 		<header class="mld-layout__header">
 			<div class="mdl-layout__header-row">
 				<span class="mdl-layout-title">
-					logo
+					ngugi
 				</span>
 				<div class="mdl-layout-spacer"> </div>
 				<nav class="mdl-navigation mdl-layout--large-screen-only">
