--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DO0CTYPE html>
 <html lang="en">
+
 <head>
-	<!--meta charset="utf-8"/>
+  <!--meta charset="utf-8"/>
 	<title>ngugiephy</title>	
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -9,47 +10,80 @@
 	<!--link rel="stylesheet" type="text/css" href="assets/style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png"-->
 
-	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
+  <!--link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
 	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"-->
+
+  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,400italic,700,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//storage.googleapis.com/code.getmdl.io/1.0.1/material.teal-red.min.css" />
+  <script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+
 <body>
-	<!--div>
-		<h2>SITE UNDER CONSTRUCTION</h2>
-	</div-->
+  <div>
+    <h2>SITE UNDER </h2>
+  </div>
 
-	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-		<header class="mld-layout__header">
-			<div class="mdl-layout__header-row">
-				<span class="mdl-layout-title">
-					ngugi
-				</span>
-				<div class="mdl-layout-spacer"> </div>
-				<nav class="mdl-navigation mdl-layout--large-screen-only">
-					<a class="mdl-navigation__link" href="#">link</a>
-					<a class="mdl-navigation__link" href="#">link</a>
-					<a class="mdl-navigation__link" href="#">link</a>
-					<a class="mdl-navigation__link" href="#">link</a>
-					<a class="mdl-navigation__link" href="#">link</a>
-				</nav>				
-			</div>		
-		</header>
-		<div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">logo</span>
-			<nav class="mdl-navigation">
-				<a class="mdl-navigation__link" href="">link</a>
-				<a class="mdl-navigation__link" href="">link</a>
-				<a class="mdl-navigation__link" href="">link</a>
-				<a class="mdl-navigation__link" href="">link</a>
-			</nav>
-		</div>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mld-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">ngugi</span>
+        <div class="mdl-layout-spacer"> </div>
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          <a class="mdl-navigation__link" href="#">link</a>
+          <a class="mdl-navigation__link" href="#">link</a>
+          <a class="mdl-navigation__link" href="#">link</a>
+          <a class="mdl-navigation__link" href="#">link</a>
+          <a class="mdl-navigation__link" href="#">link</a>
+        </nav>
+      </div>
+    </header>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">logo</span>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="">link</a>
+        <a class="mdl-navigation__link" href="">link</a>
+        <a class="mdl-navigation__link" href="">link</a>
+        <a class="mdl-navigation__link" href="">link</a>
+      </nav>
+    </div>
+    <main class="mdl-layout__content">
+      <div class="page-content">
+        <div class="mdl-grid">
+          <div class="mdl-cell mdl-cell--6-col">one</div>
+          <div class="mdl-cell mdl-cell--4-col">two</div>
+          <div class="mdl-cell mdl-cell--2-col">three</div>
+          
+          <form action="#">
+            <div class="mdl-textfield mdl-js-textfield">
+              <input class="mdl-textfield__input" type="text" id="username"/>
+              <label class="mdl-textfield__label" for="username"/>username</label>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield">
+              <input class="mdl-textfield__input" type="text" id="password"/>
+              <label class="mdl-textfield__label" for="password"/>password</label>
+            </div>
+          </form>
+      <button class="mdl-button mdl-js-button mdl-button--raised"> login</button>
+        </div> 
+      </div>
+    </main>
+    <footer class="mdl-mini-footer">
+      <div class="mdl-mini-footer--left-section">
+        <div class="mdl-logo">logo</div>
+        <ul class="mdl-mini-footer--link-list">
+          <li><a href="">f, one</a></li>
+          <li><a href="">f, two</a></li>
+          <li><a href="">f, three</a></li>
+        </ul>
+      </div>
+    </footer>
+  </div>
 
-		<footer class="">
-			
-		</footer>
-	</div>
 
-	<script type="text/javascript" src="assets/script.js"></script>
 </body>
+
 </html>
