--- a/index.html
+++ b/index.html
@@ -56,19 +56,31 @@
           <div class="mdl-cell mdl-cell--6-col">one</div>
           <div class="mdl-cell mdl-cell--4-col">two</div>
           <div class="mdl-cell mdl-cell--2-col">three</div>
-          
+
           <form action="#">
             <div class="mdl-textfield mdl-js-textfield">
-              <input class="mdl-textfield__input" type="text" id="username"/>
-              <label class="mdl-textfield__label" for="username"/>username</label>
+              <input class="mdl-textfield__input" type="text" id="username" />
+              <label class="mdl-textfield__label" for="username" />username</label>
             </div>
             <div class="mdl-textfield mdl-js-textfield">
-              <input class="mdl-textfield__input" type="text" id="password"/>
-              <label class="mdl-textfield__label" for="password"/>password</label>
+              <input class="mdl-textfield__input" type="text" id="password" />
+              <label class="mdl-textfield__label" for="password" />password</label>
             </div>
           </form>
-      <button class="mdl-button mdl-js-button mdl-button--raised"> login</button>
-        </div> 
+          <button class="mdl-button mdl-js-button mdl-button--raised"> login</button>
+          <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card mdl-shadow--2dp demo-card">
+              <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">welcome</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                a bunch of lorem ipsums
+                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </main>
     <footer class="mdl-mini-footer">
