--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
   <link rel="stylesheet" href="//storage.googleapis.com/code.getmdl.io/1.0.1/material.teal-red.min.css" />
   <script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .demo-card.mdl-card{width:512px;}
+    .demo-card > .mdl-card__title{
+      color:#fff;
+      height:176px;
+      background:url() center / cover;
+    }
+    .demo-card > .mdl-card__menu { color: #fff;}
+  </style>
 
 </head>
 
@@ -74,11 +83,24 @@
                 <h2 class="mdl-card__title-text">welcome</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                a bunch of lorem ipsums
-                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                a bunch of lorem ipsums "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+                ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+                sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+                Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+              </div>
+              <div class="mdl-card__actions">
+                <a class="mdl-button mdl-button__colored mdl-js-button mdl-js-ripple-effect">click here</a>
+              </div>
+              <div class="mdl-card__menu">
+                <button class "mdl-button mdl-button--icon mld-js-button mdl-js-ripple-effect">
+                  <i class="material-icon">share</i>
+                </button>
               </div>
             </div>
           </div>
+          <!--div class="mdl-cell mdl-cell--12-col"-->
+            
+      </div>
 
         </div>
       </div>
