--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .demo-card > .mdl-card__title{
       color:#fff;
       height:176px;
-      background:url() center / cover;
+      background:url(vignette2.wikia.nocookie.net/disney/images/4/4c/SJPA_Iron_Man_1.png/revision/latest?cb=20130904210747) center / cover;
     }
     .demo-card > .mdl-card__menu { color: #fff;}
   </style>
